codeforce div2 c, upload all problems's link

--- a/_posts/2025-07-14-abc410-d.md
+++ b/_posts/2025-07-14-abc410-d.md
@@ -2,7 +2,7 @@
 title: ABC410 D - XOR Shortest Walk
 autor: Chenpi
 date: 2025-07-14 10:08:00 +0800
-categories: [算法, ABC]
+categories: [算法, Atcoder]
 tags: [最短路, DFS, BFS, XOR]
 
 math: true
