--- a/_posts/2025-07-16-P2627-and-P2340.md
+++ b/_posts/2025-07-16-P2627-and-P2340.md
@@ -8,6 +8,9 @@ tags: [DP, 单调队列, 01背包]
 math: true
 mermaid: true
 ---
+
+> Link:[Luogu](https://www.luogu.com.cn/problem/P2627)
+
 ## P2627 [USACO11OPEN] Mowing the Lawn G
 
 ### 题目描述
@@ -100,6 +103,8 @@ void solve()
 }
 ```
 ---
+
+> Link:[Luogu](https://www.luogu.com.cn/problem/P2340)
 
 ## P2340 \[USACO03FALL] Cow Exhibition G
 
