--- a/_posts/2025-07-18-nowcoder-2025-2-A.md
+++ b/_posts/2025-07-18-nowcoder-2025-2-A.md
@@ -8,6 +8,9 @@ tags: [组合计数, 贡献法]
 math: true
 mermaid: true
 ---
+
+> Link:[Nowcoder](https://ac.nowcoder.com/acm/contest/108299/A)
+
 ## Problem A. 新太阳睡觉中心
 
 ### 题目描述
